--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,57 +1,77 @@
-<h2>Movie Search</h2>
-<form novalidate #inputForm="ngForm">
-    <div>
-      <mat-form-field>
-        <input
-          matInput
-          placeholder=""
-          name="Query"
-          id="query"
-          [(ngModel)]="query"
-        />
-      </mat-form-field>
-    <button
-      mat-stroked-button
-      color="warn"
-      (click)="getMovies(query)"
-    >
-      Search
-    </button>
-    </div>
-</form>
-<div *ngIf="loading && !details">
-    <p>Loading movies...</p>
-</div>
-<div *ngIf="loading && details">
-    <p>Loading movie...</p>
-</div>
-<div *ngIf="!details && !loading ">
-    <ul class='movies'>
-        <li *ngFor="let movie of movies"
-        (click)="onSelect(movie)">
-        <div class="card">
-            <span>{{ movie.Title }} ({{ movie.Year }})</span> 
-            <div><img src="{{movie.Poster}}" alt="Movie Poster" height="200" width="200"></div>
+<div class="container">
+    <h2>Movie Search</h2>
+    <form novalidate #inputForm="ngForm">
+        <div class="input-group mb-3">
+            <input matInput name="Query" id="query" [(ngModel)]="query" type="text" class="form-control"
+                placeholder="Movie Title" aria-describedby="basic-addon2">
+            <span class="input-group-text" id="basic-addon2" (click)="getMovies()">Search</span>
         </div>
-        <br>
-        </li>
-    </ul>
+    </form>
+    <div *ngIf="loading && !details">
+        <p>Loading movies...</p>
+    </div>
+    <div *ngIf="loading && details">
+        <p>Loading movie...</p>
+    </div>
+    <div *ngIf="!loading && movies.length == 0">
+        <p>Enter a movie to search!</p>
+    </div>
+    <div *ngIf="!details && !loading">
+        <ul class='movies'>
+            <li *ngFor="let movie of movies" (click)="onSelect(movie)">
+                <div class="card">
+                    <span>{{ movie.Title }} ({{ movie.Year }})</span>
+                    <div *ngIf="movie.Poster != 'N/A'; else notFound"><img src="{{movie.Poster}}" alt="Movie Poster" height="200" width="200"></div>
+                    <ng-template #notFound><p>No poster found.</p></ng-template>
+                </div>
+                <br>
+            </li>
+        </ul>
+        <nav *ngIf="!loading && movies.length != 0" aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                <div *ngIf="pageNumber == 1; else previousEnabled" class="page-item disabled">
+                    <li class="page-item"><a class="page-link" (click)="getMoviesByPage(pageNumber - 1)">Previous</a>
+                    </li>
+                </div>
+                <ng-template #previousEnabled>
+                    <li class="page-item"><a class="page-link" (click)="getMoviesByPage(pageNumber - 1)">Previous</a>
+                    </li>
+                </ng-template>
+                <h3>Page {{ pageNumber }} / {{ totalPages }}</h3>
+                <div *ngIf="(pageNumber + 1) > totalPages; else nextEnabled" class="page-item disabled">
+                    <li class="page-item"><a class="page-link" (click)="getMoviesByPage(pageNumber + 1)">Next</a>
+                    </li>
+                </div>
+                <ng-template #nextEnabled>
+                    <li class="page-item"><a class="page-link" (click)="getMoviesByPage(pageNumber + 1)">Next</a>
+                    </li>
+                </ng-template>
+            </ul>
+        </nav>
+    </div>
+    <div *ngIf="selectedMovie && details && !loading">
+        <div class="card">
+            <h2>{{ selectedMovie.Title }}:</h2>
+            <div><span>Released: </span>{{selectedMovie.Year}}</div>
+            <div><span>Director: </span>{{selectedMovie.Director}}</div>
+            <div><span>Box Office: </span>{{selectedMovie.BoxOffice}}</div>
+            <div><span>IMDB Rating: </span>{{selectedMovie.imdbRating}}</div>
+            <div><span>Plot: </span>{{selectedMovie.Plot}}</div>
+            <div><span>Actors: </span>{{selectedMovie.Actors}}</div>
+            <div><span>Awards: </span>{{selectedMovie.Awards}}</div>
+            <div><span>Ratings: </span></div>
+            <ul class='Ratings'>
+                <li *ngFor="let rating of selectedMovie.Ratings">
+                    <div class="rating">
+                        <span>{{ rating.Source }} ({{ rating.Value }})</span>
+                    </div>
+                </li>
+            </ul>
+            <div *ngIf="selectedMovie.Poster != 'N/A'; else notFound"><img src="{{selectedMovie.Poster}}" alt="Movie Poster" height="200" width="200"></div>
+            <ng-template #notFound><p>No poster found.</p></ng-template>
+        </div>
+        <button type="button" class="btn btn-light" (click)="back()">
+            Back
+        </button>
+    </div>
 </div>
-<div *ngIf="selectedMovie && details && !loading">
-    <button type="button" class="btn btn-primary" (click)="back()">
-        Back
-    </button>
-    <h2>{{ selectedMovie.Title }} Details</h2>
-    <div><span>Title: </span>{{selectedMovie.Title}}</div>
-    <div><span>Released: </span>{{selectedMovie.Year}}</div>
-    <div><span>Director: </span>{{selectedMovie.Director}}</div>
-    <div><span>Box Office: </span>{{selectedMovie.BoxOffice}}</div>
-    <div><span>IMDB Rating: </span>{{selectedMovie.imdbRating}}</div>
-    <div><span>Plot: </span>{{selectedMovie.Plot}}</div>
-    <div><span>Actors: </span>{{selectedMovie.Actors}}</div>
-    <div><span>Awards: </span>{{selectedMovie.Awards}}</div>
-    <div><img src="{{selectedMovie.Poster}}" alt="Movie Poster" height="200" width="200"></div>
-</div>
-
-
-
